--- a/localisation/braz_por/MD_focus_LBA_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_LBA_l_braz_por.yml
@@ -314,17 +314,17 @@
  LBA_stream_of_refugees: "Fluxo de Refugiados"
  LBA_stream_of_refugees_desc: "Libya is one of the main human-trafficking routes from Africa into Europe. Poverty in Central Africa, Islamist insurgency in the Sahel and the conflict in Sudan drives people en-masse to cross the Libyan desert in the hopes of sailing into Europe.  Many of them however, will get stuck in Libya, or even worse, end up in the bottom of the Mediterranean.\n\n§YThis idea will be removed if ALL of the following are true:\n - [NGR.GetNameWithFlag] is our puppet or we own $STATE_329$ and $STATE_1108$\n - [CHA.GetNameWithFlag] is our puppet or we own $STATE_580$ and $STATE_327$\n - [DAR.GetNameWithFlag] or [SUD.GetNameWithFlag] is our puppet or we own $STATE_614$§!"
  LBA_family_centric: "Family Centric"
- LBA_family_centric_desc: "We are encouraging families as the main building block of society."
- LBA_nation_centric: "Nation Centric"
- LBA_nation_centric_desc: "We are encouraging the nation as the main building block of society."
+ LBA_family_centric_desc: "Estamos incentivando as famílias como o principal alicerce da sociedade."
+ LBA_nation_centric: "Centrado na nação"
+ LBA_nation_centric_desc: "Estamos encorajando a nação como o principal alicerce da sociedade."
  LBA_religion_in_schools: "Educação religiosa"
  LBA_religion_in_schools_desc: "Nosso sistema educacional incorpora a religião firmemente no currículo."
  LBA_nationalism_in_schools: "Educação Nacionalista"
  LBA_nationalism_in_schools_desc: "Nosso sistema educacional incorpora firmemente o nacionalismo no currículo."
  LBA_grand_mufti_appointed: "Grande Mufti da Líbia"
  LBA_grand_mufti_appointed_desc: "Um Grande Mufti foi nomeado para interpretar a Lei Islâmica na Líbia."
- LBA_mujahideen_of_libya_idea: "Mujahideen of Libya"
- LBA_mujahideen_of_libya_idea_desc: "Libyan Mujahideen veterans from Afghanistan have reached a significant power status in Libya.\n\n§YThis idea will be removed if we are not Salafist§!"
+ LBA_mujahideen_of_libya_idea: "Mujahideen da Líbia"
+ LBA_mujahideen_of_libya_idea_desc: "Os veteranos Mujahideen líbios do Afeganistão alcançaram um status de poder significativo na Líbia.\n\n§YEsta ideia será eliminada se não formos salafistas§!"
  LBA_tanasoh_tv_idea: "Tanasuh TV"
  LBA_tanasoh_tv_idea_desc: "A national TV network has been setup to spread the messages of the Grand Mufti.\n\n§YThis idea will be removed if we are not Salafist§!"
  LBA_supreme_revolutionaries_council_idea: "Supreme Revolutionaries Council"
@@ -332,11 +332,11 @@
  LBA_immigration_target: "Immigration Campaign"
  libya_baathism_dynamic_modifier: "Libyan Ba'athism"
  libya_baathism_dynamic_modifier_desc: "The Libyan regime is using a Ba'athist undercover network to its advantage.\n\n§YThis idea will be removed if the Libyan National Movement isn't part of the ruling coalition.§!"
- LBA_mauritanian_military_infiltrated: "Infiltrated Mauritanian Military"
- LBA_mauritanian_military_infiltrated_desc: "With the help of Ba'ath party supporters, Libya has infiltrated the Mauritanian military."
- LBA_new_green_book: "The New Green Book"
- LBA_new_green_book_desc: "Muammar Gaddafi has revised his Green Book into a new version. The book is being distributed to all citizens and thought in all schools to make sure people follow the correct ideas. The release of the book will have a lasting impact on Libyan society."
- LBA_grassroots_democracy_idea: "Grassroots Democracy"
+ LBA_mauritanian_military_infiltrated: "Militares infiltrados da Mauritânia"
+ LBA_mauritanian_military_infiltrated_desc: "Com a ajuda dos apoiantes do partido Ba'ath, a Líbia infiltrou-se nos militares mauritanos."
+ LBA_new_green_book: "O Novo Livro Verde"
+ LBA_new_green_book_desc: "Muammar Gaddafi revisou o seu Livro Verde para uma nova versão. O livro está sendo distribuído a todos os cidadãos e pensado em todas as escolas para garantir que as pessoas sigam as ideias corretas. O lançamento do livro terá um impacto duradouro na sociedade líbia."
+ LBA_grassroots_democracy_idea: "Democracia Popular"
  LBA_grassroots_democracy_idea_desc: "The Libyan people have been given opportunity to engage in the democratic process from the bottom up.\n\n§YThis idea will be removed if we don't have elections.§!"
  LBA_royal_family_returned: "Return of House Senussi"
  LBA_royal_family_returned_desc: "The relatives of the deposed King Idris I have been allowed to return to Libya after decades of exile."
@@ -762,7 +762,7 @@
  LBA_allow_political_parties: "Allow Political Parties"
  LBA_allow_political_parties_desc: "Political parties have been banned in Libya ever since Gaddafi took power. However, in order for the people to properly present themselves, they need platforms for that. We should open the political landscape to more actors."
  LBA_allow_political_parties_tt: "All political parties will be legalized\n[conservatism_L] will be known as §Y£generic_conservatism_small Union for Homeland§!\n[liberalism_L] will be known as §Y£LBA_liberalism National Party for Development and Welfare§!\n[Autocracy_L] will be known as §Y£LBA_Autocracy_democracy Arab Socialist Union§!\n[Kingdom_L] will be known as §Y£LBA_Kingdom Homeland Party§!\n[Neutral_Muslim_Brotherhood_L] will be known as §Y£LBA_Neutral_Muslim_Brotherhood Justice and Construction Party§!\n[Neutral_Autocracy_L] will be known as §Y£LBA_Neutral_Autocracy National Forces Alliance§!\n[Neutral_conservatism_L] will be known as §Y£LBA_Neutral_conservatism_democracy National Front Party§!\n[Neutral_Libertarian_L] will be known as §Y£LBA_Neutral_Libertarian Democratic Party§!\n[neutral_Social_L] will be known as §Y£LBA_neutral_Social Ensaf Movement§!\n"
- LBA_grassroots_democracy: "Grassroots Democracy"
+ LBA_grassroots_democracy: "Democracia Popular"
  LBA_grassroots_democracy_desc: "Democracy and state should be by the people, for the people. Democracy needs to be present on all levels of governance so that even at the lowest level people have the opportunity to influence things."
  LBA_allow_royal_family_return: "Allow Return of Royal Family"
  LBA_allow_royal_family_return_desc: "After Gaddafi's coup in 1969, King Idris was left to live in exile. The rest of his family however, wasn't that lucky. His nephew and heir, Hasan as-Senussi along with his family, was put under house arrest. The house was burned down in 1984 and the family was moved to live in a shack at a public beach. Four years later, the family was allowed to move to the UK for Hasan's medical treatment, who died of a stroke only four years later in 1992. His son and the current Crown Prince Mohammed El Senussi still lives in London. Maybe it is time we allow them back?"
