--- a/localisation/braz_por/MD_subideology_parties_l_braz_por.yml
+++ b/localisation/braz_por/MD_subideology_parties_l_braz_por.yml
@@ -4206,7 +4206,7 @@
  BAH.liberalism_desc: ""
  BAH.Nat_Autocracy: "£generic_Nat_Autocracy_small Força de Defesa das Bahamas Reais (RBDF)"
  BAH.Nat_Autocracy_desc: ""
- BAL.Neutral_Autocracy: "£generic_Neutral_Autocracy_small Antibalaka"
+ BAL.Neutral_Autocracy: "£BAL_neutral_autocracy Antibalaka"
  BAL.Neutral_Autocracy_desc: ""
  BAN.conservatism: "£generic_conservatism_small Jatiya Party"
  BAN.conservatism_desc: ""
@@ -6549,7 +6549,7 @@
  MNT.Monarchist_desc: ""
  MON.Communist-State: "£MON_emerging_communism Partido Popular"
  MON.Communist-State_icon: "£MON_emerging_communism"
- MON.Communist-State_desc: "The Mongolian People's Party is a social democratic political party in Mongolia. It was founded as a communist party in 1920 by Mongolian revolutionaries and is the oldest political party in Mongolia. Following the Mongolian Revolution of 1990, other political parties in Mongolia were legalised and the country transitioned into a multi-party democracy. The party subsequently abandoned Marxism-Leninism in favour of democratic socialism. The party returned to power following the 2016 election and retained its majority in the 2020 election."
+ MON.Communist-State_desc: "O Partido Popular da Mongólia é um partido político social democrata na Mongólia. Foi fundado como um partido comunista em 1920 por revolucionários mongóis e é o partido político mais antigo da Mongólia. Após a Revolução Mongoliana de 1990, outros partidos políticos na Mongólia foram legalizados e o país transitou para uma democracia multi-partidária. O partido subsequentemente abandonou o marxismo-leninismo em favor do socialismo democrático. O partido retornou ao poder após as eleições de 2016 e manteve sua maioria nas eleições de 2020."
  MON.anarchist_communism: "£MON_left_wing_radical Partido Revolucionário Popular"
  MON.anarchist_communism_icon: "£MON_left_wing_radical"
  MON.anarchist_communism_desc: "O Partido Revolucionário Popular da Mongólia, fundado em 2010, é um partido político que se separou do Partido Popular da Mongólia. O Partido Popular da Mongólia foi fundado em 1920 e foi renomeado Partido Revolucionário Popular da Mongólia em 1925. Em 2010, o nome original do partido foi restaurado para Partido Popular da Mongólia. Nambar Enkhbayar, ex-presidente do partido, recomeçou em 2011, registrou e estabeleceu o novo 'Partido Revolucionário Popular da Mongólia' e foi eleito presidente do partido."
@@ -6557,7 +6557,7 @@
  MON.neutral_Social_desc: "A Coalizão da União Democrática foi uma coalizão de partidos políticos na Mongólia. Seus principais constituintes eram o Partido Nacional Democrático Mongol e o Partido Social Democrático Mongol, e suas principais políticas eram a implementação de reformas políticas e econômicas no período pós-comunista. Seu presidente foi Tsakhiagiin Elbegdorj em 1996–2000. A coalizão mais tarde tornou-se a base do atual Partido Democrático da Mongólia."
  MON.Neutral_green: "£MON_non_aligned_greens Partido Civil Vontade-Verde"
  MON.Neutral_green_icon: "£MON_non_aligned_greens"
- MON.Neutral_green_desc: "The Civil Will-Green Party  is a green liberal political party in Mongolia."
+ MON.Neutral_green_desc: "O Partido Civil Vontade–Verde é um partido político verde liberal na Mongólia."
  MON.Nat_Autocracy: "£MON_nationalist_military_junta Forças Armadas da Mongólia"
  MON.Nat_Autocracy_icon: "£MON_nationalist_military_junta"
  MON.Nat_Autocracy_desc: "As Forças Armadas da Mongólia é o nome coletivo para o exército mongol e as forças conjuntas que o compõem. Tem a missão de proteger a independência, soberania e integridade territorial da Mongólia."
@@ -8137,3 +8137,4 @@
  LIB.Nat_Fascism: "£LIB_Nat_Fascism_small (NPP) - National Patriotic Party"
  LIB.Nat_Fascism_desc: "(Nationalism) - The National Patriotic Party is the continued political successors of Charles Taylor's rebel group National Patriotic Front. The party serves mainly as a collection of Taylor's loyalist, and doesn't really have a party program. Taylor's 'policies' mainly involve securing his rule over Liberia and its neighbours."
  LIB.Nat_Fascism_icon: "£LIB_Nat_Fascism_small"
+ BAL.Neutral_Autocracy_icon: "£BAL_neutral_autocracy"
