--- a/localisation/english/MD_africa_events_l_english.yml
+++ b/localisation/english/MD_africa_events_l_english.yml
@@ -272,7 +272,7 @@
  central_africa.6.t: "The Bozizé Question"
  central_africa.6.d: "The May Coup is still fresh in our mind and Bozizé remains in the country. The traitor still seems to be garnering support amongst the various peoples of the country. It is time to ask the question and deal with the failed coup leader."
  central_africa.6.a: "Arrest Bozizé"
- central_africa.6.b: "He Would Never"
+ central_africa.6.b: "He might escape!"
 
  central_africa.7.t: "Bozizé Flees to Chad"
  central_africa.7.d: "Bozizé has fled the country just hours before anything could have been done. Military forces loyal to Bozizé have also left with him causing a substantial loss in trained forces and militias loyal to him are refusing to adhere to the rule of our government. We can invade Chad to hunt them down, or we can focus on our internal issues."
@@ -293,7 +293,7 @@
  central_africa.10.a: "Allow Patassé to Participate"
  central_africa.10.b: "Bar Patassé from the Elections"
 
- central_africa.12.t: "The 2005 Presidental Election"
+ central_africa.12.t: "The 2005 Presidential Election"
  central_africa.12.d: "The election has been postponed several times but today is the day. The general election can be held and the air is positive surrounding the election. A recent referendum was held and approved the new constitution which imposed term limits for presidents, provided better access to voting, and a variety of other improved benefits. The changes are part of the reason for the delay. Heading into the election Bozizé appears to be the most popular of the candidates. However, Ziguélé is also another strong candidate."
  central_africa.12.a: "François Bozizé"
  central_africa.12.b: "Martin Ziguélé"
