--- a/localisation/polish/MD_africa_events_l_polish.yml
+++ b/localisation/polish/MD_africa_events_l_polish.yml
@@ -211,7 +211,7 @@
  central_africa.6.t: "Pytanie Bozizé"
  central_africa.6.d: "Przewrót majowy jest wciąż świeży w naszej pamięci, a Bozizé pozostaje w kraju. Wydaje się, że zdrajca nadal zyskuje poparcie wśród różnych narodów kraju. Nadszedł czas, aby zadać pytanie i rozprawić się z przywódcą nieudanego zamachu stanu."
  central_africa.6.a: "Aresztować Bozizé"
- central_africa.6.b: "Nigdy by tego nie zrobił"
+ central_africa.6.b: "Może uciec!"
  central_africa.7.t: "Bozizé ucieka do Czadu"
  central_africa.7.d: "Bozizé uciekł z kraju na kilka godzin, zanim można było zrobić cokolwiek. Razem z nim opuściły siły zbrojne lojalne wobec Bozizé, powodując znaczne straty w wyszkolonych siłach, a lojalne wobec niego bojówki odmawiają przestrzegania zasad naszego rządu. Możemy najechać Czad, żeby ich upolować, albo możemy skupić się na naszych wewnętrznych sprawach."
  central_africa.7.a: "Zdrajca ucieka..."
