--- a/localisation/polish/MD_subideology_parties_l_polish.yml
+++ b/localisation/polish/MD_subideology_parties_l_polish.yml
@@ -688,7 +688,7 @@
  BAY.liberalism_desc: ""
  BAY.socialism: "£generic_socialism_small SPD(§CB§!) - Sozialdemokratische Partei Deutschlands (Bayern)"
  BAY.socialism_desc: ""
- BAY.anarchist_communism: "£generic_anarchist_communism_small DL - Linki"
+ BAY.anarchist_communism: "£generic_anarchist_communism_small DL - Die Linke"
  BAY.anarchist_communism_desc: ""
  BAY.Conservative: "£generic_Conservative_small BfB(§CB§!) - Bund freier Bayerischer Bürger"
  BAY.Conservative_desc: ""
@@ -4206,7 +4206,7 @@
  BAH.liberalism_desc: ""
  BAH.Nat_Autocracy: "£generic_Nat_Autocracy_small Królewskie Siły Obronne Bahamów (RBDF)"
  BAH.Nat_Autocracy_desc: ""
- BAL.Neutral_Autocracy: "£BAL_neutral_autocracy"
+ BAL.Neutral_Autocracy: "£BAL_neutral_autocracy Antibalaka"
  BAL.Neutral_Autocracy_desc: ""
  BAN.conservatism: "£generic_conservatism_small  Impreza Jatiya"
  BAN.conservatism_desc: ""
@@ -8137,3 +8137,4 @@
  LIB.Nat_Fascism: "£LIB_Nat_Fascism_small (NPP) - National Patriotic Party"
  LIB.Nat_Fascism_desc: "(Nationalism) - The National Patriotic Party is the continued political successors of Charles Taylor's rebel group National Patriotic Front. The party serves mainly as a collection of Taylor's loyalist, and doesn't really have a party program. Taylor's 'policies' mainly involve securing his rule over Liberia and its neighbours."
  LIB.Nat_Fascism_icon: "£LIB_Nat_Fascism_small"
+ BAL.Neutral_Autocracy_icon: "£BAL_neutral_autocracy"
