--- a/localisation/polish/unit_medals_l_polish.yml
+++ b/localisation/polish/unit_medals_l_polish.yml
@@ -4,22 +4,22 @@
  DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_1:0 "Brygadier"
  DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_2:0 "Generał dywizji"
  DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_3:0 "Generał broni"
- DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_4:0 "General"
+ DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_4:0 "Generał"
  USA_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_0:0 "Pułkownik"
  USA_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_1:0 "generał brygady"
  USA_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_2:0 "Generał dywizji"
  USA_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_3:0 "Generał Porucznik"
- USA_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_4:0 "General"
+ USA_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_4:0 "Generał"
  GER_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_0:0 "Oberst"
  GER_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_1:0 "Generał brygady"
  GER_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_2:0 "Generalmajor"
- GER_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_3:0 "Generalleutnant"
- GER_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_4:0 "General"
+ GER_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_3:0 "Generał leutnant"
+ GER_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_4:0 "Generał"
  DEN_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_0:0 "Oberst"
  DEN_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_1:0 "Generał brygady"
  DEN_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_2:0 "Generalmajor"
- DEN_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_3:0 "Generalløjtnant"
- DEN_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_4:0 "General"
+ DEN_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_3:0 "Generał leutnant"
+ DEN_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_4:0 "Generał"
  FRA_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_0:0 "Pułkownik"
  FRA_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_1:0 "Général de Brigade"
  FRA_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_2:0 "Général de Division"
@@ -232,8 +232,8 @@
  BAV_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_0:0 "Oberst"
  BAV_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_1:0 "Generał brygady"
  BAV_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_2:0 "Generał major"
- BAV_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_3:0 "Generalleutnant"
- BAV_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_4:0 "General"
+ BAV_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_3:0 "Generał leutnant"
+ BAV_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_4:0 "Generał"
  BHR_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_0:0 "Aqid"
  BHR_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_1:0 "Amid"
  BHR_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_2:0 "Liwa"
@@ -268,12 +268,12 @@
  BUL_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_1:0 "Brigaden General"
  BUL_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_2:0 "General-Mayor"
  BUL_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_3:0 "General-Leytenant"
- BUL_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_4:0 "General"
+ BUL_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_4:0 "Generał"
  CAN_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_0:0 "Colonel"
  CAN_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_1:0 "Brigadier-General"
  CAN_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_2:0 "Major-General"
  CAN_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_3:0 "Lieutenant-General"
- CAN_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_4:0 "General"
+ CAN_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_4:0 "Generał"
  CHE_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_0:0 "Polkovnik"
  CHE_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_1:0 "General-Mayor"
  CHE_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_2:0 "General-Leytenant"
@@ -308,7 +308,7 @@
  ENG_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_1:0 "Brigadier"
  ENG_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_2:0 "Major-General"
  ENG_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_3:0 "Lieutenant-General"
- ENG_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_4:0 "General"
+ ENG_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_4:0 "Generał"
  EST_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_0:0 "Kolonel"
  EST_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_1:0 "Brigaadikindral"
  EST_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_2:0 "Kindralmajor"
@@ -402,8 +402,8 @@
  LIC_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_0:0 "Oberst"
  LIC_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_1:0 "Brigadegeneral"
  LIC_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_2:0 "Generalmajor"
- LIC_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_3:0 "Generalleutnant"
- LIC_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_4:0 "General"
+ LIC_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_3:0 "Generał leutnant"
+ LIC_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_4:0 "Generał"
  MNT_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_0:0 "Pukovnik"
  MNT_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_1:0 "Brigadir General"
  MNT_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_2:0 "General Major"
@@ -418,7 +418,7 @@
  NIG_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_1:0 "Brigadier-General"
  NIG_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_2:0 "Major General"
  NIG_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_3:0 "Lieutenant General"
- NIG_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_4:0 "General"
+ NIG_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_4:0 "Generał"
  NKO_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_0:0 "Daechwa"
  NKO_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_1:0 "Sojang"
  NKO_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_2:0 "Chungjang"
@@ -428,7 +428,7 @@
  NOR_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_1:0 "Brigader"
  NOR_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_2:0 "Generalmajor"
  NOR_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_3:0 "Generalløytnant"
- NOR_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_4:0 "General"
+ NOR_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_4:0 "Generał"
  NUS_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_0:0 "Aqid"
  NUS_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_1:0 "Amid"
  NUS_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_2:0 "Alliwa'"
@@ -468,7 +468,7 @@
  RAJ_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_1:0 "Brigadier"
  RAJ_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_2:0 "Major General"
  RAJ_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_3:0 "Lieutenant General"
- RAJ_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_4:0 "General"
+ RAJ_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_4:0 "Generał"
  SAU_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_0:0 "Aqid"
  SAU_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_1:0 "Amid"
  SAU_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_2:0 "Liwa"
@@ -478,12 +478,12 @@
  SER_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_1:0 "Brigadni General"
  SER_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_2:0 "General-Major"
  SER_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_3:0 "General-Potpukovnik"
- SER_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_4:0 "General"
+ SER_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_4:0 "Generał"
  SIN_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_0:0 "Colonel"
  SIN_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_1:0 "Brigadier General"
  SIN_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_2:0 "Major General"
  SIN_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_3:0 "Lieutenant General"
- SIN_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_4:0 "General"
+ SIN_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_4:0 "Generał"
  SMA_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_0:0 "Maggiore"
  SMA_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_1:0 "Tenente Colonnello"
  SMA_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_2:0 "Colonnello"
@@ -503,7 +503,7 @@
  SWE_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_1:0 "Brigadgeneral"
  SWE_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_2:0 "Generalmajor"
  SWE_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_3:0 "Generallöjtnant"
- SWE_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_4:0 "General"
+ SWE_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_4:0 "Generał"
  SWI_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_0:0 "Oberstleutnant"
  SWI_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_1:0 "Oberst"
  SWI_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_2:0 "Brigadier"
