--- a/localisation/russian/MD_africa_events_l_russian.yml
+++ b/localisation/russian/MD_africa_events_l_russian.yml
@@ -211,7 +211,7 @@
  central_africa.6.t: "Вопрос Бозизе"
  central_africa.6.d: "Майский переворот еще свеж в памяти, а Бозизе по-прежнему находится в стране. Похоже, что предатель по-прежнему пользуется поддержкой среди различных народов страны. Настало время прояснить ситуацию с тем, кто пытался совершить переворот."
  central_africa.6.a: "Арест Бозизе"
- central_africa.6.b: "Он никогда бы не стал"
+ central_africa.6.b: "Он может сбежать!"
  central_africa.7.t: "Бозизе бежит в Чад"
  central_africa.7.d: "Бозизе бежал из страны за несколько часов до того, как мы могли бы что-то предпринять. Вместе с ним страну покинули и верные ему военные силы. Это привело к значительным потерям среди обученных военнослужащих, а ополченцы, которые были лояльны Бозизе, отказываются подчиняться нашему правительству. Мы можем вторгнуться в Чад и преследовать их или же сосредоточиться на решении внутренних проблем."
  central_africa.7.a: "Предатель сбежал..."
