--- a/localisation/russian/MD_focus_DEN_l_russian.yml
+++ b/localisation/russian/MD_focus_DEN_l_russian.yml
@@ -1375,7 +1375,7 @@
  DEN_Regimental_Doctors: "Полковые врачи обороны"
  DEN_Civilian_Education: "Оборонное гражданское образование"
  DEN_Dental_Plan: "План оборонной стоматологии"
- DEN_army_dynamic_modifier: "Датские силы обороны"
+ DEN_army_dynamic_modifier: "Вооруженные силы"
  DEN_Danish_Defence_Force: "Датские силы обороны"
  DEN_Danish_Defence_Force_desc: "Датская армия является сухопутным компонентом обороны Дании и отвечает за защиту Дании и её интересов как внутри страны, так и на международном уровне. Она была основана в 1614 году и имеет долгую историю военной службы."
  DEN_Dental_Plan_Add_tt: "Изменяет §YДатские силы обороны§! \nОрганизация дивизии: §G+10%§! \nМодификатор военных расходов: §R+2%§!"
