--- a/localisation/russian/MD_focus_NOR_l_russian.yml
+++ b/localisation/russian/MD_focus_NOR_l_russian.yml
@@ -80,8 +80,8 @@
  NOR_food_safety_regulations_desc: "Многие из ранее столь необходимых мер политики в области продовольствия должны быть реализованы, чтобы наша реформа министерства была успешной"
  NOR_pesticide_distribution: "Распределение пестицидов"
  NOR_pesticide_distribution_desc: "Мы никогда не думали, что это станет проблемой в нашем климате, но, кажется, Норвегия может быть под угрозой... от насекомых."
- NOR_forsavet: "Forsvaret"
- NOR_forsavet_desc: "Forsvaret, directly translating to \"The Defense\", is the name of the Norwegian Armed Forces. The bravery and adaptability of great armed forces are ready to defend against any danger, night and day. They are trained for all conditions and know their mission, to protect the Norwegian people for their continued peace and liberty."
+ NOR_forsavet: "Вооруженные силы"
+ NOR_forsavet_desc: "Форсварет, что в переводе означает «Защита», — это название норвежских вооруженных сил. Храбрость и адаптируемость великих вооруженных сил готовы защищаться от любой опасности днем ​​и ночью. Они обучены работать в любых условиях и знают свою миссию — защищать норвежский народ ради его дальнейшего мира и свободы."
  NOR_sjorforsvaret: "Sjorforsvaret"
  NOR_sjorforsvaret_desc: "Основная цель нашего флота - защита интересов нашей торговли, хотя это не так уж часто и требуется. Но нам все равно нужны силы сдерживания, чтобы командовать морями, на которые у нас есть право."
  NOR_haakonsvern_naval_base: "Военно-морская база Хааконсверн"
