--- a/localisation/russian/MD_focus_POL_l_russian.yml
+++ b/localisation/russian/MD_focus_POL_l_russian.yml
@@ -2951,38 +2951,38 @@
  POL_divide_the_nations_desc: "Чехия и Словакия — две страны, но очень близкие друг к другу. Чехословакии больше не существует, но их старая история может объединить их в сопротивлении нашему влиянию."
  POL_offer_help_in_industry_development: "Предложите помощь в развитии отрасли"
  POL_offer_help_in_industry_development_desc: "Мы должны показать чехам и словакам, что мы способны заботиться об их внутренних делах. Мы поддержим их экономически в обмен на доброе слово о нас на телевидении."
- POL_intimidation: "Intimidation"
- POL_intimidation_desc: "Hungary is a proud nation and will probably not be easily influenced by communism. We will show them that they should better think twice before rejecting our system."
- POL_diplomatic_mission: "Diplomatic Mission"
- POL_diplomatic_mission_desc: "We must try to convince Hungarians that communism can also follow the path of peace (which in our case is a lie)."
- POL_question_about_czech_republic: "Question Of Czech Republic"
- POL_question_about_czech_republic_desc: "We can ask the Czechs to join our alliance. Still, it's probably better to gain full control over them."
- POL_invite_slovakia: "Invite Slovakia"
- POL_invite_slovakia_desc: "Slovakia has enough communist influence. It's time for them to join us."
- POL_hungarian_bros: "Hungarian Bros"
- POL_hungarian_bros_desc: "We have always... well, almost always, had friendly relations with Hungary. It's time to renew our friendship."
+ POL_intimidation: "Запугивание"
+ POL_intimidation_desc: "Венгрия — гордая нация, и, вероятно, ей нелегко будет поддаться влиянию коммунизма. Мы покажем им, что им следует дважды подумать, прежде чем отвергать нашу систему."
+ POL_diplomatic_mission: "Дипломатическая миссия"
+ POL_diplomatic_mission_desc: "Мы должны попытаться убедить венгров, что коммунизм может пойти и по пути мира (что в нашем случае является ложью)."
+ POL_question_about_czech_republic: "Вопрос о Чехии"
+ POL_question_about_czech_republic_desc: "Мы можем попросить чехов присоединиться к нашему альянсу. Тем не менее, вероятно, лучше получить над ними полный контроль."
+ POL_invite_slovakia: "Пригласить Словакию"
+ POL_invite_slovakia_desc: "Словакия имеет достаточное коммунистическое влияние. Пришло время им присоединиться к нам."
+ POL_hungarian_bros: "Венгерские братья"
+ POL_hungarian_bros_desc: "У нас всегда... ну, почти всегда были дружеские отношения с Венгрией. Пришло время возобновить нашу дружбу."
  POL_add_dofi_visegrad_spirit: "Activate §9Visegrad Group§! National Spirit"
- POL_start_baltic_plans: "Start Baltic Plans"
- POL_start_baltic_plans_desc: "Before we reach Scandinavia, we need to increase our influence in the Baltic Sea."
- POL_baltic_plans_deadline_mission: "Baltic Plans Deadline"
- POL_baltic_plans_deadline_mission_desc: "We cannot wait too long to join Lithuania, Latvia and Estonia. If we do not achieve our goal within 2 years, the Grand Council may stop funding our actions."
+ POL_start_baltic_plans: "Старт Балтийских планов"
+ POL_start_baltic_plans_desc: "Прежде чем мы достигнем Скандинавии, нам необходимо увеличить свое влияние в Балтийском море."
+ POL_baltic_plans_deadline_mission: "Балтийские планы. Крайний срок"
+ POL_baltic_plans_deadline_mission_desc: "Мы не можем ждать слишком долго, чтобы присоединиться к Литве, Латвии и Эстонии. Если мы не достигнем нашей цели в течение 2 лет, Большой Совет может прекратить финансирование наших действий."
  POL_baltic_plans_influence_mission: "Антикоммунистические кампании"
  POL_baltic_plans_influence_mission_desc: "Некоторым людям не нравится, что у нас есть влияние в их стране. Иногда они убеждают других пренебрегать нашими действиями, но особой угрозы они не представляют."
- POL_promise_protection: "Promise Protection"
- POL_promise_protection_desc: "Last time, the Baltic countries surrendered to Russia without any fight. Because the war was pointless. But now we can give them protection."
- POL_antagonize_russia_decision: "Antagonize Russia"
- POL_antagonize_russia_decision_desc: "Let's show them the difference between Russian policy and ours. \"We want to create a strong alliance, they want to create a totalitarian state.\""
- POL_offer_rail_baltica_improvement: "Offer Rail Baltica Improvement"
- POL_offer_rail_baltica_improvement_desc: "Rail Baltica was a great success. Let's support the Baltic countries in improving this project."
- POL_recognize_great_alliance: "Recognize Great Alliance"
- POL_recognize_great_alliance_desc: "The Alliance of the Two Crowns, the Polish-Lithuanian Commonwealth and one of the greatest military powers of medieval Europe. Let's make Lithuanians realize that an alliance with Poland, which is not limited by democratic procedures, is the best thing that can happen to their country."
- POL_threat_baltic_sea_restrictions: "Threat Baltic Sea Restrictions"
- POL_threat_baltic_sea_restrictions_desc: "This is risky, especially since we do not dominate the entire Baltic Sea, but we could risk obstructing maritime trade for Latvia and Estonia."
- POL_offer_baltic_sea_protection: "Offer Baltic Sea Protection"
- POL_offer_baltic_sea_protection_desc: "In the event of war with Russia or NATO, we must ensure security in our waters."
- POL_invite_lithuania: "Connect With Lithuania Again"
+ POL_promise_protection: "Обещание защиты"
+ POL_promise_protection_desc: "В прошлый раз страны Балтии сдались России без боя. Потому что война была бессмысленной. Но теперь мы можем дать им защиту."
+ POL_antagonize_russia_decision: "Противодействовать России"
+ POL_antagonize_russia_decision_desc: "Давайте покажем им разницу между российской политикой и нашей. «Мы хотим создать сильный альянс, они хотят создать тоталитарное государство»."
+ POL_offer_rail_baltica_improvement: "Предложение по улучшению Rail Baltica"
+ POL_offer_rail_baltica_improvement_desc: "Rail Baltica имела большой успех. Давайте поддержим страны Балтии в улучшении этого проекта."
+ POL_recognize_great_alliance: "Признайте Великий Альянс"
+ POL_recognize_great_alliance_desc: "Союз Двух Корон, Речь Посполитая и одна из величайших военных держав средневековой Европы. Давайте заставим литовцев осознать, что союз с Польшей, не ограниченный демократическими процедурами, – это лучшее, что может случиться с их страной."
+ POL_threat_baltic_sea_restrictions: "Угроза ограничения Балтийского моря"
+ POL_threat_baltic_sea_restrictions_desc: "Это рискованно, тем более, что мы не доминируем во всем Балтийском море, но мы можем рискнуть помешать морской торговле Латвии и Эстонии."
+ POL_offer_baltic_sea_protection: "Предложить защиту Балтийского моря"
+ POL_offer_baltic_sea_protection_desc: "В случае войны с Россией или НАТО мы должны обеспечить безопасность в наших водах."
+ POL_invite_lithuania: "Снова соединитесь с Литвой"
  POL_invite_latvia: "Пригласить Латвию"
- POL_invite_estonia: "Reach For Estonia"
+ POL_invite_estonia: "Достичь Эстонии"
  POL_add_dofi_baltic_spirit: "Activate §OBaltic States§! National Spirit"
  POL_start_balkan_plans: "Start East Balkan Plans"
  POL_start_balkan_plans_desc: "Romania will give us access to the Black Sea, and Bulgaria will provide us with a stable position on the Balkan Peninsula."
