--- a/localisation/simp_chinese/MD_subideology_parties_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_subideology_parties_l_simp_chinese.yml
@@ -2074,7 +2074,7 @@
  BAH.liberalism_desc: ""
  BAH.Nat_Autocracy: "£generic_Nat_Autocracy_small 巴哈马皇家国防军"
  BAH.Nat_Autocracy_desc: ""
- BAL.Neutral_Autocracy: "£BAL_neutral_autocracy"
+ BAL.Neutral_Autocracy: "£BAL_neutral_autocracy 反巴拉卡"
  BAL.Neutral_Autocracy_desc: ""
  BAN.conservatism: "£generic_conservatism_small 国家党"
  BAN.conservatism_desc: ""
@@ -8137,3 +8137,4 @@
  LIB.Nat_Fascism: "£LIB_Nat_Fascism_small 民族爱国党"
  LIB.Nat_Fascism_desc: "（民族主义） - 民族爱国党是查尔斯·泰勒叛军组织民族爱国阵线的政治继承者。该党主要作为泰勒的忠实拥护者的集合，并没有真正的党派纲领。泰勒的“政策”主要涉及确保他对利比里亚及其邻国的统治。"
  LIB.Nat_Fascism_icon: "£LIB_Nat_Fascism_small"
+ BAL.Neutral_Autocracy_icon: "£BAL_neutral_autocracy"
