--- a/localisation/russian/MD_focus_IRQ_l_russian.yml
+++ b/localisation/russian/MD_focus_IRQ_l_russian.yml
@@ -1263,7 +1263,7 @@
  iraq_saddam.4.a: "Cut all ties with [KUW.GetName]!"
  iraq_saddam.5.t: "[IRQ.GetLeader] Proposes Defensive Pact"
  iraq_saddam.5.d: "[IRQ.GetLeader] has come to us with a rather strange offer. The Iraqi leader has requested that we support them in the case of an invasion by a foreign power. in exchange, they will recognize our independence and renounce their claims on the Kurdish lands they hold claims on."
- iraq_saddam.5.a: "A Great Opportunity"
+ iraq_saddam.5.a: "Отличная возможность"
  iraq_saddam.5.b: "Какая ужасная идея"
  iraq_saddam.6.t: "[KUR.GetName] Accepts!"
  iraq_saddam.6.d: "[KUR.GetName] has agreed to sign a defensive pact with our nation. in exchange, we will renounce our claims."
@@ -1275,18 +1275,18 @@
  iraq_yearly.1.d: "Izzat Ibrahim al-Douri has requested that we spend some more of our budget on officer and general training for our high ranking officers in order to better prepare our troops for any large-scale conflicts. Obviously, his recommendation would primarily benefit him and his needs."
  iraq_yearly.1.a: "Конечно, почему бы и нет."
  iraq_yearly.1.b: "Нет"
- iraq_yearly.2.t: "Mukhabarat Solidify Their Influence"
- iraq_yearly.2.d: "The Mukhabarat (our Intelligence Department) has recently made a push to expand their influence amongst our military personnel, generals, and like-wise. Their growth would mean the slow fading of the Kleptocracys influence in our nation, and a transition to even lesser civil rights for our people."
+ iraq_yearly.2.t: "Мухабарат укрепляет свое влияние"
+ iraq_yearly.2.d: "Мухабарат (наш разведывательный департамент) недавно предпринял попытку расширить свое влияние среди наших военнослужащих, генералов и т. д. Их рост будет означать медленное угасание влияния клептократии в нашей стране и переход к еще меньшим гражданским правам для нашего народа."
  iraq_yearly.2.a: "Я не вижу проблемы"
  iraq_yearly.2.b: "Нет! Этого не произойдет"
  iraq_yearly.3.t: "Иранские войска незаконно пересекли пролив Шат-эль-Араб"
  iraq_yearly.3.d: "Некоторые подразделения с иранской стороны границы незаконно пересекли границу в Ирак, что вызвало бурную дискуссию в нашем Объединенном комитете начальников штабов. Очевидно, что теперь мы должны занять определенную позицию в отношении этого вторжения на иракскую территорию."
- iraq_yearly.3.a: "Respond Now!"
- iraq_yearly.3.b: "I Don't Care"
- IRQ_baath_equilibrium: "Shockwaves of Ba'athism"
- IRQ_baath_equilibrium_desc: "Ba'athist sentiments still run high amongst some of our people, and we need to ensure this is handled with properly."
- IRQ_arable_land_project: "Arable Land Transformation"
- IRQ_arable_land_project_desc: "Certain plots of land in this state have been terraformed to be more arable for farming."
+ iraq_yearly.3.a: "Ответьте сейчас!"
+ iraq_yearly.3.b: "Мне все равно."
+ IRQ_baath_equilibrium: "Ударные волны баасизма"
+ IRQ_baath_equilibrium_desc: "Баасистские настроения все еще сильны среди некоторых наших людей, и мы должны обеспечить, чтобы с этим справлялись должным образом."
+ IRQ_arable_land_project: "Преобразование пахотных земель"
+ IRQ_arable_land_project_desc: "Некоторые участки земли в этом штате были терраформированы, чтобы сделать их более пригодными для земледелия."
  IRQ_saddam_rage_idea: "[IRQ.GetLeader]'s Anger"
  IRQ_saddam_rage_idea_desc: "[IRQ.GetLeader] has a little difficulty controlling his rage, despite knowing it harms our nation in the long run..\n§W-----------------------------------------------------------------§!\nThis national spirit will be §Rremoved§! if §HSaddam Hussein§! or §HUday Hussein§! are not the leader of Iraq."
  IRQ_resisting_sanctions: "Сопротивление санкциям"
