--- a/localisation/russian/MD_subideology_parties_l_russian.yml
+++ b/localisation/russian/MD_subideology_parties_l_russian.yml
@@ -3987,7 +3987,7 @@
  BAH.liberalism_desc: ""
  BAH.Nat_Autocracy: "£generic_Nat_Autocracy_small Вооружённые силы Багамских Островов"
  BAH.Nat_Autocracy_desc: ""
- BAL.Neutral_Autocracy: "£generic_Neutral_Autocracy_small Антибалака"
+ BAL.Neutral_Autocracy: "£BAL_neutral_autocracy Antibalaka"
  BAL.Neutral_Autocracy_desc: ""
  BAN.conservatism: "£generic_conservatism_small Джатья"
  BAN.conservatism_desc: ""
@@ -8137,3 +8137,4 @@
  LIB.Nat_Fascism: "£LIB_Nat_Fascism_small (NPP) - National Patriotic Party"
  LIB.Nat_Fascism_desc: "(Nationalism) - The National Patriotic Party is the continued political successors of Charles Taylor's rebel group National Patriotic Front. The party serves mainly as a collection of Taylor's loyalist, and doesn't really have a party program. Taylor's 'policies' mainly involve securing his rule over Liberia and its neighbours."
  LIB.Nat_Fascism_icon: "£LIB_Nat_Fascism_small"
+ BAL.Neutral_Autocracy_icon: "£BAL_neutral_autocracy"
