--- a/localisation/simp_chinese/MD_countries_cosmetic_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_countries_cosmetic_l_simp_chinese.yml
@@ -271,20 +271,20 @@
  SHN_federation_nationalist: "南掸邦国"
  SHN_federation_nationalist_DEF: "南掸邦国"
  SHN_federation_nationalist_ADJ: "南掸邦"
- WAA_federation_fascism: "佤邦国"
- WAA_federation_fascism_DEF: "佤邦国"
- WAA_federation_democratic: "佤邦国"
- WAA_federation_democratic_DEF: "佤邦国"
- WAA_federation_neutrality: "佤邦国"
- WAA_federation_neutrality_DEF: "佤邦国"
- WAA_federation_communism: "佤邦国"
- WAA_federation_communism_DEF: "佤邦国"
+ WAA_federation_fascism: "佤邦"
+ WAA_federation_fascism_DEF: "佤邦"
+ WAA_federation_democratic: "佤邦"
+ WAA_federation_democratic_DEF: "佤邦"
+ WAA_federation_neutrality: "佤邦"
+ WAA_federation_neutrality_DEF: "佤邦"
+ WAA_federation_communism: "佤邦"
+ WAA_federation_communism_DEF: "佤邦"
  WAA_federation_fascism_ADJ: "佤邦"
  WAA_federation_democratic_ADJ: "佤邦"
  WAA_federation_neutrality_ADJ: "佤邦"
  WAA_federation_communism_ADJ: "佤邦"
- WAA_federation_nationalist: "佤邦国"
- WAA_federation_nationalist_DEF: "佤邦国"
+ WAA_federation_nationalist: "佤邦"
+ WAA_federation_nationalist_DEF: "佤邦"
  WAA_federation_nationalist_ADJ: "佤邦"
  TAI_TAIWAN_fascism: "台湾"
  TAI_TAIWAN_fascism_DEF: "台湾"
