--- a/localisation/simp_chinese/MD_focus_SOV_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_SOV_l_simp_chinese.yml
@@ -549,7 +549,7 @@
  SOV_claim_finland_desc: "芬兰的边境离圣彼得堡太近了。我们必须像彼得大帝一样，把这条边界向北和向西推进，在北方决定性地击败北欧人，使他们再也不会威胁到我们！"
  SOV_zhirinovsky_secure_east_asia: "亚洲雄心"
  SOV_zhirinovsky_secure_east_asia_desc: "俄罗斯外交一向是多方面的。这就是为什么我们也应该确保并扩大我们在亚洲的影响力。光荣属于俄罗斯！"
- SOV_demand_manchuria: "归还黄俄罗斯"
+ SOV_demand_manchuria: "夺回黄俄罗斯"
  SOV_demand_manchuria_desc: "是时候重启旧项目了--黄俄罗斯。我们坚决准备向中国索取曾经属于俄罗斯帝国的土地。"
  SOV_zheltoros: "对蒙古发起闪电战"
  SOV_zheltoros_desc: "蒙古长期生活在贫困和腐败之中。是时候将他们的权力掌握在我们的帝国手中了。"
