--- a/localisation/english/MD_focus_POL_l_english.yml
+++ b/localisation/english/MD_focus_POL_l_english.yml
@@ -4021,7 +4021,7 @@
  POL_connections_to_eu: "Connections To EU"
  POL_international_law: "Follows International Law"
  POL_spoke_against_russia: "Spoke Against Russia"
- POL_relied_on_europe: "Relience On Europe"
+ POL_relied_on_europe: "Reliance On Europe"
  POL_bought_leopards: "Arms Purchases"
  POL_reached_to_usa: "Reached To USA"
  POL_reached_to_russia: "Reached To Russia"
