--- a/Changelog.txt
+++ b/Changelog.txt
@@ -17,6 +17,7 @@ v1.10.4
   - Fixed the ledger and some money tooltips missing the Migration Control total
   - Removed the duplicate initialization of city images causing a slowdown in the beginning of the game
   - Fixed the Generic Tree "Neutrality" focus allowing you to go to isolation if you have the military internal faction
+  - Fixed the duplicate intelligence agency for COL
 
  Content:
   - Added "Overlord Subsidies" Diplomatic Action
@@ -26,6 +27,7 @@ v1.10.4
 
  Localization:
   - Fixed the misspelling of the "Norwegian Armed Forces" in the Norwegian tree
+  - Fixed the misspelling of the "Reliance On Europe" opinion modifier
 
  Performance:
   - Consolidated some files so the startup time is quicker for the mod
